Fixing padding on mobile
title says it all

--- a/css/website-style.css
+++ b/css/website-style.css
@@ -31,7 +31,7 @@
 .PageTitle {
     font: Montserrat, "Montserrat Medium";
     font-size: 90px;
-    padding: 10px;
+    padding: 15px;
 }
 
 .SubTitle {
